Use the ancestor clipping mask layer as the DisplayItemClient for the clip mask.

The actual PaintLayer that the mask applies to may have a much
smaller visual rect (or even empty), but nevertheless have a child
which is not empty. If the visual rect were too small, some paint
ops may not be rastered.

Bug: 736661
Change-Id: Ib61766057e36f83cfab2be35d08c7773d2b676e1
Reviewed-on: https://chromium-review.googlesource.com/562614
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485076}
Former-commit-id: d43ca17f375b2f0cefc8ccaffa22e0c72ea6c040